# gaitkit

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.md  RELEASE.md  REPRODUCIBILITY.md  SECURITY.md  THIRD_PARTY_MODELS.md  TODO.md
.github/workflows/: ci-audit.yml  ci.yml  release.yml
matlab/: README.md  example_detect.m
matlab/+BIKEgait/: detect.m  installPythonBackend.m  listMethods.m
matlab/+gaitkit/: detect.m  installPythonBackend.m  listMethods.m
matlab/include/: gait_api.h
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/src/gaitkit/: __init__.py  _compat.py  _core.py  _ensemble.py  _io.py  _viz.py  bayesian_bis_native.py  cli.py  dgei_native.py  ghoussayni_native.py  hreljac_native.py  mickelborough_native.py  oconnor_native.py  vancanneyt_native.py  zeni_native.py
python/src/gaitkit/data/: __init__.py  example_healthy.json  example_kuopio.json  example_parkinson.json  example_stroke.json  fo_intellevent.onnx  ic_intellevent.onnx
python/src/gaitkit/data/c3d/: fukuchi_WBDS19walkT01.c3d  fukuchi_WBDS42walkT03.c3d  vanderzee_p10_trial3.c3d
python/src/gaitkit/detectors/: __init__.py  axis_utils.py  bayesian_bis.py  bayesian_bis_v2.py  deepevent_detector.py  dgei_detector.py  ghoussayni_detector.py  hreljac_detector.py  intellevent_detector.py  mickelborough_detector.py  oconnor_detector.py  vancanneyt_detector.py  zeni_detector.py
python/src/gaitkit/evaluation/: __init__.py  matching.py  metrics.py  statistics.py
python/src/gaitkit/extractors/: __init__.py  base_extractor.py  biocv_extractor.py  camargo_extractor.py  elderly_fallrisk_extractor.py  figshare_pd_extractor.py  fukuchi_extractor.py  hood_amputee_extractor.py  itw_extractor.py  kuopio_extractor.py  kuopio_openpose_extractor.py  laroche_extractor.py  nature_extractor.py  parkinsonnw_extractor.py  schreiber_extractor.py  vancriekinge_extractor.py  vanderzee_extractor.py  vestibulopathy_extractor.py
python/src/gaitkit/native/: __init__.py  _gait_native.c  setup.py
python/src/gaitkit/utils/: __init__.py  freezing_detection.py  preprocessing.py
r/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r/R/: detect.R  install.R  methods.R
r/man/: gait_detect.Rd  gait_install_python.Rd  gait_methods.Rd  gaitkit_result.Rd  gk_detect.Rd  gk_detect_ensemble.Rd  gk_export_detection.Rd  gk_install_python.Rd  gk_list_examples.Rd  gk_load_example.Rd  gk_methods.Rd
r/tests/: testthat.R
scripts/: run_biocv_benchmark.py  run_itw_benchmark.py  run_laroche_benchmark.py  run_markerless_benchmark.py  run_parkinsonnw_benchmark.py  run_vestibulopathy_benchmark.py
tests/: __init__.py  expected_example_bike_regression.json  test_api.py  test_axis_utils.py  test_bayesian_bis_detector.py  test_bayesian_bis_v2_detector.py  test_bikegait.py  test_biocv_extractor.py  test_c3d_benchmark.Rmd  test_c3d_benchmark_regression.py  test_cli.py  test_compat.py  test_deepevent_detector.py  test_deepevent_weights.py  test_detectors_registry.py  test_dgei_detector.py  test_docs_contract.py  test_ensemble_api.py  test_evaluation_matching.py  test_evaluation_metrics.py  test_evaluation_statistics.py  test_extractors_base.py  test_formulae_validation.py  test_ghoussayni_detector.py  test_hreljac_detector.py  test_intellevent_detector.py  test_io.py  test_mickelborough_detector.py  test_native_wrappers.py  test_oconnor_detector.py  test_optional_dependency_autoinstall.py  test_packaging_contract.py  test_portability_contract.py  test_vancanneyt_detector.py  test_viz.py  test_zeni_detector.py
(+7 files in other folders)
