[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "gaitkit"
version = "0.1.0"
description = "Universal gait event detection toolkit — 10 methods including BIKE, with C-accelerated backends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Frédéric Fer", email = "f.fer@institut-myologie.org"}
]
keywords = ["gait", "biomechanics", "motion-capture", "heel-strike", "toe-off", "event-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.14"]
deep = ["tensorflow>=2.12", "h5py"]
viz = ["matplotlib>=3.7"]
c3d = ["ezc3d>=1.5"]
all = ["gaitkit[onnx,deep,viz,c3d]"]

[project.scripts]
gaitkit-detect = "gaitkit.cli:main"

[project.urls]
Homepage = "https://github.com/IDMDataHub/gaitkit"
Documentation = "https://github.com/IDMDataHub/gaitkit#readme"
Repository = "https://github.com/IDMDataHub/gaitkit"
Issues = "https://github.com/IDMDataHub/gaitkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaitkit = ["native/*.c", "native/*.h", "data/*.json", "data/*.onnx", "data/*.h5"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
