[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "gaitkit"
version = "1.2.0"
description = "Universal gait event detection toolkit — 10 methods including BIKE, with C-accelerated backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Frédéric Fer", email = "f.fer@institut-myologie.org"}
]
keywords = ["gait", "biomechanics", "motion-capture", "heel-strike", "toe-off", "event-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "ezc3d>=1.5",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.14"]
deep = ["tensorflow>=2.12", "h5py"]
viz = ["matplotlib>=3.7"]
c3d = []
test = ["pytest>=7.0", "coverage>=7.0"]
all = [
    "onnxruntime>=1.14",
    "tensorflow>=2.12",
    "h5py",
    "matplotlib>=3.7",
]

[project.scripts]
gaitkit-detect = "gaitkit.cli:main"

[project.urls]
Homepage = "https://github.com/IDMDataHub/gaitkit"
Documentation = "https://github.com/IDMDataHub/gaitkit#readme"
Repository = "https://github.com/IDMDataHub/gaitkit"
Issues = "https://github.com/IDMDataHub/gaitkit/issues"
Changelog = "https://github.com/IDMDataHub/gaitkit/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaitkit = ["native/*.c", "native/*.h", "data/*.json", "data/*.onnx"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
